Add div to write up of project descriptions and remove random paragraph

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -20,30 +20,30 @@
         <div id="design-projects">
           <p id="headline">CODING PROJECTS</p>
           <div class="individual-project">
-            <p>
-                <a href="https://sarahikeda.github.io/notanothersadlight/"><video width="180" height="250" autoplay loop>
-                <source src="notanothersadlight/assets/lamp.mp4" type="video/mp4">
-              </video></a><br>
-              <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
-              was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the light in coordination with the emotion. <br>
-              <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Source Code</b></a><br>
-            </p>
+            <a href="https://sarahikeda.github.io/notanothersadlight/"><video width="180" height="250" autoplay loop>
+            <source src="notanothersadlight/assets/lamp.mp4" type="video/mp4">
+          </video></a><br>
+          <div class="write-up">
+            <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
+            was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the light in coordination with the emotion. <br>
+            <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Source Code</b></a><br>
+            </div>
           </div>
           <div class="individual-project">
-            <p>
-              <a href="https://sarahikeda.github.io/decisionsdecisions/"><img class="project-img" src="images/activitypicker.gif" alt="Picture of DecisionsDecisions project"></a>
+            <a href="https://sarahikeda.github.io/decisionsdecisions/"><img class="project-img" src="images/decisions.png" alt="Picture of DecisionsDecisions project"></a>
+            <div class="write-up">
               <a href="https://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
               Having trouble figuring out what to do today? Channel the powers of jQuery to make a decision based on your mood and energy level.<br>
               <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Source Code</b></a><br>
-            </p>
+            </div>
           </div>
           <div class= "individual-project">
-            <p>
-              <a href="https://github.com/sarahikeda/bringchips"><img class="project-img" src="images/potluck.png" alt="Picture of Potluck Project"></a>
+            <a href="https://github.com/sarahikeda/bringchips"><img class="project-img" src="images/potluck.png" alt="Picture of Potluck Project"></a>
+            <div class="write-up">
               <a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a>
               is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.
               <br><a href="https://github.com/sarahikeda/bringchips"><b>Source Code</b></a><br>
-            </p>
+            </div>
           </div>
           <!-- <div class= "individual-project"> -->
             <!-- <p> -->
@@ -53,13 +53,13 @@
             <!-- </p> -->
           <!-- </div> -->
           <div class= "individual-project">
-                <p>
-                  <a href="https://github.com/sarahikeda/farmersmarket"><img class="project-img" src="images/market.jpg" alt="Picture of Market Project"></a>
-                  <a href="https://github.com/sarahikeda/farmersmarket"><b>farmersmarket</b></a>
-                  is a short exercise in Ruby to create a checkout system for market vendors. Testing with RSpec.
-                  <a href="https://github.com/sarahikeda/farmersmarket"><b>Source Code</b></a><br>
-                </p>
-              </div>
+            <a href="https://github.com/sarahikeda/farmersmarket"><img class="project-img" src="images/market.jpg" alt="Picture of Market Project"></a>
+            <div class="write-up">
+              <a href="https://github.com/sarahikeda/farmersmarket"><b>farmersmarket</b></a>
+              is a short exercise in Ruby to create a checkout system for market vendors. Testing with RSpec.
+              <a href="https://github.com/sarahikeda/farmersmarket"><b>Source Code</b></a><br>
+            </div>
+          </div>
           <div class="break"></div>
         </div>
       </div>
