Initial commit for slow friendship page

--- a/theslowfriendshipproject.html
+++ b/theslowfriendshipproject.html
@@ -16,7 +16,7 @@
         <!-- <p class="explanation">If you want to come along on this journey, <a href="mailto:sarahikeda@gmail.com">let's talk!</a></p> -->
       </div>
     </div>
-    <div class="container explanation">
+    <div class="explanation">
       <form action="https://formspree.io/sarahikeda@gmail.com"
       method="POST">
         <input type="text" name="name"><br>
