Add color blocks with text

--- a/theslowfriendshipproject.html
+++ b/theslowfriendshipproject.html
@@ -5,7 +5,8 @@
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="stylesheets/index.js"></script>
-      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
       <title>The Slow Friendship Project</title>
   </head>
   <body>
@@ -13,20 +14,27 @@
       <div class="container">
         <p class="name">The Slow</p>
         <p class="name">Friendship Project</p>
-        <!-- <p class="explanation">If you want to come along on this journey, <a href="mailto:sarahikeda@gmail.com">let's talk!</a></p> -->
       </div>
     </div>
-    <div class="explanation">
-      <form action="https://formspree.io/sarahikeda@gmail.com"
-      method="POST">
-        <input type="text" name="name"><br>
-        <input type="text" name="secret">
-        <input type="submit" value="Send">
-      </form>
-
+    <div class="about">
+      <h4>ABOUT</h4>
+      <p>NYC can be lonely. We've found it hard to meet people through the flurry of social apps out there and want to provide another way.</p></br>
+      <p>The Slow Friendship Project is about taking a breather -- slowing down to have conversations with people we might not normally meet in our daily rush.</p>
     </div>
-    <div class="picture">
-      <p>hi</p>
+    <div class="filler"></div>
+    <div class="secret">
+      <form action="https://formspree.io/sarahikeda@gmail.com" method="POST">
+        <div class="form-group">
+          <textarea class="form-control"rows="5" placeholder="Before you attend the event, please submit something personal about you -- an anecdote, fun fact, whatever you feel comfortable with!"></textarea>
+          <input class="btn btn-primary" type="submit" value="Send">
+        </div>
+      </form>
+      <p>These will be anonymized and we'll each take turns reading one at random and then responding with our own story (Reasoning: We're testing out a hypothesis that people want to share things that are vulnerable but want to do so in a comfortable space where what they share is reciprocated in some way).</p>
+    </div>
+    <div class="about explanation">
+      <h4>WHAT TO EXPECT</h4>
+      <p>Think low key. Sarah will host a small group of 4-6 people in her apartment (it's small but cozy) and we'll have a potluck on Sunday evening.</p>
+
     </div>
   </body>
 </html>
