Increase width and height

--- a/happybirthdayezz.html
+++ b/happybirthdayezz.html
@@ -11,7 +11,7 @@
     <div>
       <div style="text-align: center; color: #1fff64; font-size: 50px">Happy Birthday!</div>
       <div style="margin-left: 10px">
-      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ow-ab5OtQJ5DiPfK_pYpES4gkkug0nhP" width="1400" height="1000"></iframe>
+      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ow-ab5OtQJ5DiPfK_pYpES4gkkug0nhP" width="100%" height="200%"></iframe>
     </div>
   </body>
 </html>
