--- a/scavenger.html
+++ b/scavenger.html
@@ -5,13 +5,12 @@
       <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-      <title>SARAH ING</title>
+      <title>Scavenger Hunt</title>
   </head>
   <body>
     <div>
-      <div style="text-align: center; color: #1fff64; font-size: 50px">Happy Birthday, Ezz!
-        <p style="font-size: 20px">Here is a list of all the places and experiences we've had since we've met.</p>
-        <p style="font-size: 20px">Ready for our next adventure? <a href="https://sarahikeda.github.io/scavenger">Click here.</a></p>
+      <div style="text-align: center; color: #1fff64">
+        <p style="font-size: 20px">The adventure begins!</p>
 
       </div>
       <div>
