Revise padding for portfolio projects

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -18,10 +18,8 @@
       <div class="main-info">
         <div class="break"></div>
         <div id="design-projects">
-          <p id="headline">CODING PROJECTS</p>
           <div class="individual-project">
-            <a href="https://sarahikeda.github.io/notanothersadlight/"><video width="180" height="250" autoplay loop>
-            <source src="notanothersadlight/assets/lamp.mp4" type="video/mp4">
+            <a href="https://sarahikeda.github.io/notanothersadlight/"><img class="project-img" src="./notanothersadlight/assets/atrocities.jpg" alt="atrocity-lamp">
           </video></a><br>
           <div class="write-up">
             <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
