--- a/projectpotluck/index.html
+++ b/projectpotluck/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Project Potluck</title>
+    <title>Side Project Friendships</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
         <div class="row h-100">
           <div class="col-lg-9 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Project Potluck is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring yourself, a potluck dish, and a side project/idea!</h1>
+              <h1 class="mb-5">Side Project Friendships is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring yourself, a potluck dish, and a side project/idea!</h1>
             </div>
           </div>
         </div>
@@ -45,9 +45,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h3 class="section-heading">What to expect.</h3>
+            <h3 class="section-heading">Sunday, July 15th at 1pm. What to expect.</h3>
               <p>Gather at Denny's house in Brooklyn with ample kitchen table space to work. (Also, head's up -- there are two cats in case allergies are of concern!)</p>
-              <p>1pm. Say hellos, make friends, general intros.</p>
+              <p>Say hellos, make friends, general intros.</p>
               <p>Bring a side project, collaborate, or work individually for 4 hours-ish.</p>
               <p>6pm. Come together to enjoy a low-key potluck with everybody.</p>
           </div>
@@ -58,7 +58,9 @@
     <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <a href="mailto:theslowfriendshipproject@gmail.com?Subject=Project%20Potluck" target="_top">Email us to join.</a>
+          <p>Who's behind this, exactly? Meet <a href="http://denny.space">Denny</a> + <a href="https://sarahikeda.github.io">Sarah</a>. We also host <a href="http://theslowfriendshipproject.splashthat.com/">The Slow Friendship Project.</a></p>
+          <br>
+          <h3><a href="mailto:theslowfriendshipproject@gmail.com?Subject=Project%20Potluck" target="_top">Email us to join.</a></h3>
         </div>
       </div>
     </section>
