Remove resume and linkedin

--- a/code-portfolio.html
+++ b/code-portfolio.html
@@ -52,7 +52,7 @@
                 <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
               </a>
               <div class="write-up">
-                <a href="theslowfriendshipproject.splashthat.com"><b>The Slow Friendship Project</b></a>
+                <a href="https://theslowfriendshipproject.splashthat.com"><b>The Slow Friendship Project</b></a>
                 is about taking a breather -- slowing down to have conversations with people we might not normally meet in our daily rush.
               </div>
             </div>
