Add side project friendships

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
           <a href="https://sarahikeda.github.io">SARAH ING</a>
         </div>
         <ul class="col-sm-8 navright">
-          <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Projects</a></li>
-          <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
+          <li id="about"><a href="https://sarahikeda.github.io/projects.html">Projects</a></li>
           <div class="social-media">
             <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" src="images/socialicons/twitter.png" alt="twitter"></a>
-            <a href="https://www.instagram.com/sarahikedas/"><img class="media-icons" src="images/socialicons/instagram.png" alt="instagram"></a>
             <a href="mailto:sarahikeda@gmail.com"><img class="media-icons" src="images/socialicons/email.png" alt="email"></a></li>
           </div>
         </ul>
