--- a/projects.html
+++ b/projects.html
@@ -9,14 +9,10 @@
   <body>
       <div>
         <p class="container name"><a href="https://sarahikeda.github.io">SARAH ING</a></p>
-        <ul class="navright">
-          <li id="about"><a href="https://sarahikeda.github.io">Home</a></li>
-          <li><a href="SIResume.pdf" target="_blank">Resume</a></li>
-          <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a>
-        </ul>
         <div class="container">
       </div>
       <div class="main-info">
+        <h3 class="section-title container">CODE</h3>
         <div class="break"></div>
         <div id="design-projects">
           <div class="individual-project">
@@ -26,7 +22,7 @@
             <br>
             <div class="write-up">
               <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
-              was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to show the stories that are left behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the light in coordination with the emotion. <br>
+              is a code/art installation that was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to visualize the stories that we leave behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the light in coordination with the emotion. <br>
               <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Source Code</b></a><br>
             </div>
           </div>
@@ -34,32 +30,29 @@
             <a href="https://sarahikeda.github.io/decisionsdecisions/"><img class="project-img" src="images/decisions.png" alt="Picture of Decisions project"></a>
             <div class="write-up">
               <a href="https://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
-              Having trouble figuring out what to do today? Channel the powers of jQuery to make a decision based on your mood and energy level.<br>
+              Having trouble figuring out what to do today? Channel the powers of Javascript to make a decision based on your mood and energy level.<br>
               <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Source Code</b></a><br>
             </div>
           </div>
-          <div class="row">
-            <div class="individual-project">
-              <a href="https://github.com/sarahikeda/bringchips"><img class="project-img" src="images/potluck.png" alt="Picture of Potluck Project"></a>
-              <div class="write-up">
-                <a href="https://github.com/sarahikeda/bringchips"><b>Bring Chips</b></a>
-                is a Rails application for those hosting or attending a potluck. Keep track of who's bringing what and avoid starvation.
-                <br><a href="https://github.com/sarahikeda/bringchips"><b>Source Code</b></a><br>
-              </div>
-            </div>
-            <div class="individual-project">
-              <a href="theslowfriendshipproject.splashthat.com">
-                <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
-              </a>
-              <div class="write-up">
-                <a href="https://theslowfriendshipproject.splashthat.com"><b>The Slow Friendship Project</b></a>
-                is about taking a breather -- slowing down to have conversations with people we might not normally meet in our daily rush.
-              </div>
+          <h3 class="section-title container">COMMUNITY</h3>
+          <br>
+          <div class="individual-project">
+            <a href="theslowfriendshipproject.splashthat.com">
+              <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
+            </a>
+            <div class="write-up">
+              <a href="https://theslowfriendshipproject.splashthat.com"><b>The Slow Friendship Project</b></a>
+              is about taking a breather -- slowing down to have conversations with people we might not normally meet in our daily rush.
             </div>
           </div>
-      </div>
-          <!-- <div class= "individual-project"> -->
-            <!-- <p> -->
+          <div class="individual-project">
+              <a href="https://sarahikeda.github.io/sideprojectfriendships/index.html"><img class="project-img" src="images/table.jpeg" alt="Picture of Table"></a>
+              <div class="write-up">
+                <a href="https://sarahikeda.github.io/sideprojectfriendships/index.html"><b>Side Project Friendships</b></a>
+                is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring yourself, a potluck dish, and a side project/idea.
+              </div>
+            </div>        <!-- <div class= "individual-project"> -->
+          <!-- <p> -->
               <!-- <a href="https://github.com/sarahikeda/InSession"><img class="project-img" src="images/insession.png" alt="Picture of Project"></a> -->
               <!-- <a href="https://github.com/sarahikeda/InSession"><b>InSession </b></a> -->
               <!-- is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript. -->
