Add email link for sign up and change alignment

--- a/startswithhello/index.html
+++ b/startswithhello/index.html
@@ -54,9 +54,9 @@
         <div class="row h-100">
           <div class="col-lg-12 my-auto">
             <div class="header-content mx-auto">
-              <h1>Starts With Hello</h1>
-              <h2 class="mb-5">is for women who are seeking more out of their careers. We connect you with small, intimate accountability groups.
-             </h2>
+              <h1><strong>Starts With Hello</strong></h1>
+              <h3 class="mb-5">is for women who are seeking more out of their careers. We connect you with small, intimate accountability groups.
+             </h3>
             </div>
           </div>
         </div>
@@ -66,7 +66,7 @@
     <section class="download bg-primary text-left" id="download">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 mx-auto">
+          <div class="mx-auto">
             <h3 class="section-heading">The what.</h3>
               <ol>
                 <li>We find and connect you with a group of 6-8 other ambitious women.</li>
@@ -78,27 +78,22 @@
       </div>
     </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
-
 
   <section class="features" id="features">
     <div class="container">
-      <div class="section-heading text-center">
-        <h3 class="section-heading">The why.</h3>
+      <div class="section-heading">
+        <h3>The why.</h3>
         <p>Pleased to meet you. I'm <a href="https://sarahikeda.github.io">Sarah</a>.
-        <p>As someone who's career-focused + a career switcher, it's often a big struggle to find just the right people to talk to
+        As someone who's career-focused + a career switcher, it's often a big struggle to find just the right people to talk to
         for advice and support. There are online forums and meetups but I often felt like the connections got lost in the
         flurry of attendees. Starts With Hello is my answer for that -- an app that brings personal connection back to the
         internet.</p>
+        <br>
+        <h3><a href="mailto:sarah@startswhello.com">Sign up.</a></h3>
       </div>
     </div>
   </section>
+
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
