--- a/startswithhello/index.html
+++ b/startswithhello/index.html
@@ -63,7 +63,7 @@
       </div>
     </header>
 
-    <section class="download bg-primary text-left" id="download">
+    <section class="download bg-primary">
       <div class="container">
         <div class="row">
           <div class="mx-auto">
@@ -79,17 +79,22 @@
     </section>
 
 
-  <section class="features" id="features">
+  <section class="download" id="features">
     <div class="container">
-      <div class="section-heading">
-        <h3>The why.</h3>
-        <p>Pleased to meet you. I'm <a href="https://sarahikeda.github.io">Sarah</a>.
-        As someone who's career-focused + a career switcher, it's often a big struggle to find just the right people to talk to
-        for advice and support. There are online forums and meetups but I often felt like the connections got lost in the
-        flurry of attendees. Starts With Hello is my answer for that -- an app that brings personal connection back to the
-        internet.</p>
-        <br>
-        <h3><a href="mailto:sarah@startswhello.com">Sign up.</a></h3>
+      <div class="row">
+        <div class="mx-auto">
+          <h3 class="section-heading">The why.</h3>
+          <p>Pleased to meet you. I'm <a href="https://sarahikeda.github.io">Sarah</a>.
+          As someone who's career-focused + a career switcher, it's often a big struggle to find just the right people to talk to
+          for advice and support. There are online forums and meetups but I often felt like the connections got lost in the
+          flurry of attendees. Starts With Hello is my answer for that -- an app that brings personal connection back to the
+          internet.</p>
+          <br>
+          <form class="gform" method="POST" data-email="sarah@startswhello.com" action="https://script.google.com/macros/s/AKfycbwY5XE1n1gb8Fo0HnSKkSIsi5ZgAw5fHcDQOqHf47rUgc9lMSz9/exec">
+            <input type="email" name="email" placeholder="Email address">
+            <input type="submit" value="Join a Group">
+          </form>
+        </div>
       </div>
     </div>
   </section>
