--- a/startswithhello/index.html
+++ b/startswithhello/index.html
@@ -90,7 +90,7 @@
           flurry of attendees. Starts With Hello is my answer for that -- an app that brings personal connection back to the
           internet.</p>
           <br>
-          <form class="gform" method="POST" data-email="sarah@startswhello.com" action="https://script.google.com/macros/s/AKfycbwY5XE1n1gb8Fo0HnSKkSIsi5ZgAw5fHcDQOqHf47rUgc9lMSz9/exec">
+          <form class="gform" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwY5XE1n1gb8Fo0HnSKkSIsi5ZgAw5fHcDQOqHf47rUgc9lMSz9/exec">
             <input type="email" name="email" placeholder="Email address">
             <input type="submit" value="Join a Group">
           </form>
