Add css for email form

--- a/startswithhello/index.html
+++ b/startswithhello/index.html
@@ -78,23 +78,23 @@
       </div>
     </section>
 
-
-  <section class="download" id="features">
+  <section class="about" id="features">
     <div class="container">
-      <div class="row">
-        <div class="mx-auto">
-          <h3 class="section-heading">The why.</h3>
-          <p>Pleased to meet you. I'm <a href="https://sarahikeda.github.io">Sarah</a>.
-          As someone who's career-focused + a career switcher, it's often a big struggle to find just the right people to talk to
-          for advice and support. There are online forums and meetups but I often felt like the connections got lost in the
-          flurry of attendees. Starts With Hello is my answer for that -- an app that brings personal connection back to the
-          internet.</p>
-          <br>
-          <form class="gform" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwY5XE1n1gb8Fo0HnSKkSIsi5ZgAw5fHcDQOqHf47rUgc9lMSz9/exec">
-            <input type="email" name="email" placeholder="Email address">
-            <input type="submit" value="Join a Group">
-          </form>
+      <div class="description">
+        <h3 class="section-heading">The why.</h3>
+        <p>Pleased to meet you. I'm <a href="https://sarahikeda.github.io">Sarah</a>.
+        As someone who's career-focused + a career switcher, it's often a big struggle to find just the right people to talk to
+        for advice and support. There are online forums and meetups but I often felt like the connections got lost in the
+        flurry of attendees. Starts With Hello is my answer for that -- an app that brings personal connection back to the
+        internet.</p>
+        <br>
+        <div style="display: none;" class="thank_you_message">
+          <h2>Thanks! We will contact you soon.</h2>
         </div>
+        <form class="gform" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwY5XE1n1gb8Fo0HnSKkSIsi5ZgAw5fHcDQOqHf47rUgc9lMSz9/exec">
+          <input type="email" name="email" placeholder="Email address">
+          <input type="submit" value="Join a Group">
+        </form>
       </div>
     </div>
   </section>
@@ -102,6 +102,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script data-cfasync="false" type="text/javascript" src="index.js"></script>
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
