Add screenshot of mockup

--- a/sideprojectfriendships/index.html
+++ b/sideprojectfriendships/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/new-age.min.css" rel="stylesheet">
+    <link href="css/new-age.css" rel="stylesheet">
 
   </head>
 
@@ -30,11 +30,11 @@
 
 
     <header class="masthead">
-      <div class="container h-100">
+      <div class="container h-200">
         <div class="row h-100">
           <div class="col-lg-9 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Side Project Friendships is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring yourself, a potluck dish, and a side project/idea!</h1>
+              <h1 class="mb-10">Side Project Friendships is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring yourself, a potluck dish, and a side project/idea!</h1>
             </div>
           </div>
         </div>
