--- a/notanothersadlight/index.html
+++ b/notanothersadlight/index.html
@@ -11,9 +11,6 @@
         <p class="name"><a href="https://sarahikeda.github.io">SARAH ING</a></p>
         <ul class="navright">
           <li id="about"><a href="https://sarahikeda.github.io">Home</a></li>
-          <li id="about"><a href="https://sarahikeda.github.io/code-portfolio.html">Code</a></li>
-          <li><a href="https://sarahikeda.github.io/SIResume.pdf" target="_blank">Resume</a></li>
-          <!-- <li id="about"><a href="https://sarahikeda.github.io/strangers">Thesis</a> -->
         </ul>
       </div>
     </div>
@@ -22,7 +19,7 @@
         <source src="assets/lamp.mp4" type="video/mp4">
         </video>
       </div>
-    <div class="description">
+    <div class="container description">
       <h4>Not Another SAD Light</h4>
       <p>"Not Another SAD Light" is a work created in response to the Manchester International Festival's work, <a href="http://mif.co.uk/mif17-events/one-of-two-stories-or-both/">"One of Two Stories, or Both."</a> The radio series prompts the audience to examine how stories lend meanings to places left behind.</p>
 
@@ -32,11 +29,11 @@
 
       <p>I wanted to create this work to capture the haunting, lingering nature of content. There have been many stories and many emotions before us and "Not Another Sad Light" reminds us of their presence.</p>
     </div>
-    <div class="portfolio-stream">
+    <!-- <div class="portfolio-stream">
       <img id="atrocity" src="assets/atrocities.jpg" alt="atrocity-lamp">
       <img id="manchester" src="assets/manchester.jpg" alt="manchestertweet">
       <img id="friends" src="assets/lifelongfriends.jpg" alt="lifelongfriends">
-    </div>
+    </div> -->
     <div class="press">
       <p>Exhibited</p>
       <ul>
