Fix grid for projects

--- a/index.html
+++ b/index.html
@@ -8,33 +8,30 @@
       <title>SARAH ING</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 name">
-          <a href="https://sarahikeda.github.io">SARAH ING</a>
-        </div>
-        <ul class="col-sm-8 navright">
-          <li id="about"><a href="https://sarahikeda.github.io/projects.html">Projects</a></li>
-          <div class="social-media">
-            <li><a href="https://twitter.com/sarah_ing"><img class="media-icons" src="images/socialicons/twitter.png" alt="twitter"></a>
-            <a href="mailto:sarahikeda@gmail.com"><img class="media-icons" src="images/socialicons/email.png" alt="email"></a></li>
-          </div>
-        </ul>
-       </div>
+    <div class="navigation">
+      <div class="name">
+        <a href="https://sarahikeda.github.io">SARAH ING</a>
+      </div>
     </div>
     <div class="container">
       <div class="row about-me">
         <p class="intro">Hi! I'm ceaselessly curious/nosy. When I moved from NY to Portland, OR at 13, I created a survey and handed it out to my new classmates so I could learn about them. I didn't become the most popular kid at school but I did know everyone's favorite color. [If we meet, expect lots of questions.]</p>
-          <h3 id="fist-pump">These things makes me fist-pumpingly excited:</h3><br>
-          <p>Empowerment. <a href="https://sarahikeda.github.io/notanothersadlight">Creative tech</a>. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y"> Slam poetry.</a><a href="https://sarahikeda.github.io/strangers"> Strangers</a>.</p>
-          <br>
+          <h3 class="fist-pump">These things makes me fist-pumpingly excited:</h3><br>
+          <div class="activity-description">
+            <p>Empowerment. <a href="https://sarahikeda.github.io/notanothersadlight">Creative tech</a>. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y"> Slam poetry.</a><a href="https://sarahikeda.github.io/strangers"> Strangers</a>.</p>
+            <br>
 
-          <p><a href="https://en.wikipedia.org/wiki/Sentiment_analysis">Sentiment analysis.</a> How do we teach computers to understand us and essentially, be human?
-          </p>
-          <br>
-          <p>Potlucks. <a href="http://www.aquariumofpacific.org/images/olc/whale_shark2.jpg">Whale sharks</a> and <a href="https://www.dropbox.com/s/ymie3fzqgu0p8d6/484862_10100686720169268_418135144_n.jpg?dl=0">scuba diving. </a> <a href="https://medium.com/@Sarah_Ing/code-like-a-scuba-diver-a74dcb9df4">Coding and scuba diving.</a> Community. <a href="https://en.wikipedia.org/wiki/Tom_Swifty#Examples">Making people groan with bad jokes.</a>Bright wigs for Halloween.</p><br>
-          <img id="halloween" src="images/halloween.jpg" alt="Picture of Sarah">
+            <p><a href="https://en.wikipedia.org/wiki/Sentiment_analysis">Sentiment analysis.</a> How do we teach computers to understand us and essentially, be human?
+            </p>
+            <br>
+            <p>Potlucks. <a href="http://www.aquariumofpacific.org/images/olc/whale_shark2.jpg">Whale sharks</a> and <a href="https://www.dropbox.com/s/ymie3fzqgu0p8d6/484862_10100686720169268_418135144_n.jpg?dl=0">scuba diving. </a> <a href="https://medium.com/@Sarah_Ing/code-like-a-scuba-diver-a74dcb9df4">Coding and scuba diving.</a> Community. <a href="https://en.wikipedia.org/wiki/Tom_Swifty#Examples">Making people groan with bad jokes.</a>Bright wigs for Halloween.</p><br>
+          </div>
+          <a href="mailto:sarahikeda@gmail.com"><img class="halloween" src="images/halloween.jpg" alt="Picture of Sarah"></a>
         </div>
+      </div>
+      <div class="projects">
+        <a href="https://sarahikeda.github.io/projects.html">Projects</a>
+        <a href="mailto:sarahikeda@gmail.com">Say hi.</a>
       </div>
     </div>
   </body>
