--- a/projects.html
+++ b/projects.html
@@ -7,74 +7,71 @@
       <title>SARAH ING</title>
   </head>
   <body>
-      <div>
-        <p class="container name"><a href="https://sarahikeda.github.io">SARAH ING</a></p>
-        <div class="container">
-      </div>
-      <div class="main-info">
-        <h3 class="section-title container">CODE</h3>
-        <div class="break"></div>
-        <div id="design-projects">
-          <div class="individual-project">
-            <a href="https://sarahikeda.github.io/notanothersadlight/">
-              <img class="project-img" src="./notanothersadlight/assets/atrocities.jpg" alt="atrocity-lamp">
-            </a>
-            <br>
-            <div class="write-up">
-              <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
-              is a code/art installation that was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to visualize the stories that we leave behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the light in coordination with the emotion. <br>
-              <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Code</b></a><br>
-            </div>
-          </div>
-          <div class="individual-project">
-              <a href="https://sarahikeda.github.io/notanothersadlight/">
-                <img class="project-img" src="images/bci.jpg" alt="atrocity-lamp">
-              </a>
-              <br>
-              <div class="write-up">
-                <a href="https://github.com/sarahikeda/brain-computer-installation"><b>Artificial Brain Opera</b></a>
-                is a code/art installation using a brain computer interface and text analysis to expose our vulnerabilities and inner selves. This project was created in partnership with Thoughtworks and Art-A-Hack.<br>
-                <a href="https://github.com/sarahikeda/brain-computer-installation"><b>Code: speech-to-text, sentiment analysis, arduino, Neurosky, p5.js, python</b></a><br>
-              </div>
-            </div>
-          <div class="individual-project">
-            <a href="https://sarahikeda.github.io/decisionsdecisions/"><img class="project-img" src="images/decisions.png" alt="Picture of Decisions project"></a>
-            <div class="write-up">
-              <a href="https://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
-              Having trouble figuring out what to do today? Channel the powers of Javascript to make a decision based on your mood and energy level.<br>
-              <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Code</b></a><br>
-            </div>
-          </div>
-          <div class="individual-project"></div>
-          <h3 class="section-title container">COMMUNITY</h3>
-            <div class="individual-project">
-              <a href="theslowfriendshipproject.splashthat.com">
-                <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
-              </a>
-              <div class="write-up">
-                <a href="https://theslowfriendshipproject.splashthat.com"><b>The Slow Friendship Project</b></a>
-                is about taking a breather -- slowing down to have conversations with people we might not normally meet in our daily rush.
-              </div>
-            </div>
-            <div class="individual-project">
-                <a href="https://sarahikeda.github.io/sideprojectfriendships/index.html"><img class="project-img" src="images/table.jpeg" alt="Picture of Table"></a>
-                <div class="write-up">
-                  <a href="https://sarahikeda.github.io/sideprojectfriendships/index.html"><b>Side Project Friendships</b></a>
-                  is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring yourself, a potluck dish, and a side project/idea.
-                </div>
-              </div>
-
-              <!-- <div class= "individual-project"> -->
-          <!-- <p> -->
-              <!-- <a href="https://github.com/sarahikeda/InSession"><img class="project-img" src="images/insession.png" alt="Picture of Project"></a> -->
-              <!-- <a href="https://github.com/sarahikeda/InSession"><b>InSession </b></a> -->
-              <!-- is a mobile application designed to connect online learners to in-person study groups. Students can also chat with their peers and seek help in the forum. Technologies utilized: Ruby on Rails, Postgres, Elastic Search, Faye, Mapbox and CoffeeScript. -->
-            <!-- </p> -->
-          <!-- </div> -->
-
-          <div class="break"></div>
+    <div class="container">
+      <p class="name"><a href="https://sarahikeda.github.io">SARAH ING</a></p>
+    </div>
+    <div class="break"></div>
+    <div class="design-projects">
+      <div class="individual-project">
+        <a href="https://sarahikeda.github.io/notanothersadlight/">
+          <img class="project-img" src="./notanothersadlight/assets/atrocities.jpg" alt="atrocity-lamp">
+        </a>
+        <br>
+        <div class="write-up">
+          <a href="https://sarahikeda.github.io/notanothersadlight/"><b>Not Another SAD Light</b></a>
+          is a code/art installation that was commissioned by <a href="https://www.mif.co.uk">MIF</a>, to visualize the
+          stories that we leave behind. I performed sentiment analysis on tweets and used the Philips Hue API to change the
+          light in coordination with the emotion. Featured on the BBC.<br>
+          <a href="https://github.com/sarahikeda/whatsleftbehind"><b>Code</b></a><br>
         </div>
       </div>
+      <div class="individual-project">
+        <a href="https://sarahikeda.github.io/notanothersadlight/">
+          <img class="project-img" src="images/bci.jpg" alt="atrocity-lamp">
+        </a>
+        <br>
+        <div class="write-up">
+          <a href="#"><b>Artificial Brain Opera</b></a>
+          is a code/art installation using a brain computer interface and text analysis to expose our vulnerabilities and
+          inner selves. This project was created in partnership with Thoughtworks and Art-A-Hack.<br>
+          <a href="https://github.com/sarahikeda/brain-computer-installation"><b>Code: speech-to-text, sentiment analysis, arduino, Neurosky, p5.js, python</b></a><br>
+        </div>
+      </div>
+      <div class="individual-project">
+        <a href="#"><img class="project-img" src="images/decisions.png" alt="Picture of Decisions project"></a>
+        <div class="write-up">
+          <a href="https://sarahikeda.github.io/decisionsdecisions/"><b>DecisionsDecisions </b></a>
+          Having trouble figuring out what to do today? Channel the powers of Javascript to make a decision based on your mood
+          and energy level.<br>
+          <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Code</b></a><br>
+        </div>
+      </div>
+      <div class="break"></div>
+      <div class="individual-project">
+        <a href="theslowfriendshipproject.splashthat.com">
+          <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
+        </a>
+        <div class="write-up">
+          <a href="https://theslowfriendshipproject.splashthat.com"><b>The Slow Friendship Project</b></a>
+          is about taking a breather -- slowing down to have conversations with people we might not normally meet in our
+          daily rush.
+        </div>
+      </div>
+      <div class="individual-project">
+        <a href="https://sarahikeda.github.io/sideprojectfriendships/index.html"><img class="project-img" src="images/table.jpeg"
+            alt="Picture of Table"></a>
+        <div class="write-up">
+          <a href="https://sarahikeda.github.io/sideprojectfriendships/index.html"><b>Side Project Friendships</b></a>
+          is a get together of 6 strangers (we prefer to call them soon to be friends) to work and chat together. Bring
+          yourself, a potluck dish, and a side project/idea.
+        </div>
+      </div>
+      <!--
+
+      <
+
+
+       -->
     </div>
   </body>
 </html>
