Add mit project

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
       </div>
       <div class="individual-project">
         <a href="https://sarahikeda.github.io/notanothersadlight/">
-          <img class="project-img" src="images/bci.jpg" alt="atrocity-lamp">
+          <img class="project-img" src="images/bci.jpg" alt="bci-opera">
         </a>
         <br>
         <div class="write-up">
@@ -35,6 +35,17 @@
           is a code/art installation using a brain computer interface and text analysis to expose our vulnerabilities and
           inner selves. This project was created in partnership with Thoughtworks and Art-A-Hack.<br>
           <a href="https://github.com/sarahikeda/brain-computer-installation"><b>Code: speech-to-text, sentiment analysis, arduino, Neurosky, p5.js, python</b></a><br>
+        </div>
+      </div>
+      <div class="individual-project">
+        <a href="#">
+          <img class="project-img" src="images/mit.jpg" alt="mit-breathe-project">
+        </a>
+        <br>
+        <div class="write-up">
+          <a href="#"><b>Breathe of Sound</b></a>
+          is a code/art project from a hackathon at MIT Media Lab. It uses the breathe and heartbeat of audience members to co-create a musical performance.<br>
+          <a href="#"><b>Code: Max MSP, Arduino, JavaScript, Processing</b></a><br>
         </div>
       </div>
       <div class="individual-project">
@@ -46,7 +57,6 @@
           <a href="https://github.com/sarahikeda/decisionsdecisions"><b>Code</b></a><br>
         </div>
       </div>
-      <div class="break"></div>
       <div class="individual-project">
         <a href="theslowfriendshipproject.splashthat.com">
           <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
