Fix link and typo

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
         <br>
         <div class="write-up">
           <a href="#"><b>Breathe of Sound</b></a>
-          is a code/art project from a hackathon at MIT Media Lab. It uses the breathe and heartbeat of audience members to co-create a musical performance.<br>
+          is a code/art project from a hackathon at MIT Media Lab. It uses the breath and heartbeat of audience members to co-create a musical performance.<br>
           <a href="#"><b>Code: Max MSP, Arduino, JavaScript, Processing</b></a><br>
         </div>
       </div>
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="individual-project">
-        <a href="theslowfriendshipproject.splashthat.com">
+        <a href="https://theslowfriendshipproject.splashthat.com">
           <img class="project-img" src="images/tsfp.png" alt="Picture of Potluck Project">
         </a>
         <div class="write-up">
