--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,8 @@
 <html>
   <head>
      <meta charset="utf-8">
+     <meta content="width=device-width, initial-scale=1" name="viewport" />
+
       <link rel="stylesheet" type="text/css" href="stylesheets/about-us.css">
       <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
