--- a/designbridge.html
+++ b/designbridge.html
@@ -7,24 +7,24 @@
       <script type="text/javascript" src="stylesheets/index.js" ></script>
       <title>Sarah Ing</title>
   </head>
-  <body>
-    <div class="container">
-      <div class="main-info">
-        <div class="intro">
-          <p id="question">Hi DesignBridge! <br>I am a developer turned designer who is looking to bring her enthusiasm and 'heathy dose of intuition' to Amsterdam.
-          <p class="explanation">I get excited by</p>
-            <ul>
-                <li>Empowerment.</li>
-                <li>Crafting great stories.</li>
-                <li><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y">Slam poetry.</a></li>
-                <li>Accessibility.</li>
-              </ul>
-              <p class="name"><img id="arrow" src="images/arrow.png" alt="arrow">&nbsp<a href="mailto:sarahikeda@gmail.com">Let's talk!</a></p>
-              <p class="name"><img id="arrow" src="images/arrow.png" alt="arrow">&nbsp<a href="https://sarahikeda.github.io">About me </a></p>
-          </div>
-        </div>
-        <br>
-    </div>
+  <main>
+    <h2 class="overlay">
+      Hi Ryan Yoder and Romaric Fotsing
+    </h2>
 
-  </body>
+  </main>
+  <video autoplay muted loop>
+	<source src="http://techslides.com/
+demos/sample-videos/small.webm" type="video/
+webm" />
+	<source src="http://techslides.com/
+demos/sample-videos/small.mp4" type="video/
+mp4" />
+	<source src="http://techslides.com/
+demos/sample-videos/small.ogv" type="video/
+ogg" />
+	<source src="http://techslides.com/
+demos/sample-videos/small.3gp" type="video/3gp"
+/>
+</video>
 </html>
