--- a/coaching.html
+++ b/coaching.html
@@ -11,11 +11,11 @@
     <div id="about">
     	<div class="regular-container">
     		<div class="row">
-    			<div class="col-xs-12 col-sm-12 col-md-6 about-copy-container">
+    			<div class="col-xs-12 col-sm-12 col-md-7 about-copy-container">
     				<h1 class="headline text-white">Hi, I'm Sarah.</h1>
-    				<p class="subhead text-white" data-wow-delay="0.8s">As a Life Coach, I help you tap into your full potential, find direction, and accomplish your goals. You are born with unique talents, desires, and motivations; I coach to bring those amazing qualities in alignment with your goals and bring a strong sense of purpose and direction to your everyday life. With proven tools and techniques, my clients get to discover their true self, their true desires, and manifest the life of their dreams.</p>
+    				<p class="subhead text-white" data-wow-delay="0.8s">I'm here to help you feel and do better, in whatever way is important to you! Coming up with a place to start, navigating the fuzzy of life, and just -- getting unstuck can be tricky. We'll work together to conquer what sometimes feels so, insurmountable.</p>
     			</div>
-    			<div class="col-xs-12 col-sm-12 col-md-6">
+    			<div class="col-xs-12 col-sm-12 col-md-5">
     				<div class="about-image">
     					<img src="./images/Sarah.jpg" alt="sarah" class="fluid-img">
     				</div>
