--- a/coaching.html
+++ b/coaching.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
      <meta charset="utf-8">
@@ -7,7 +8,6 @@
       <title>SARAH ING</title>
   </head>
   <body>
-
     <div id="about">
     	<div class="regular-container">
     		<div class="row">
@@ -23,9 +23,5 @@
     		</div>
     	</div>
     </div>
-
-
-
-
   </body>
 </html>
