--- a/designbridge.html
+++ b/designbridge.html
@@ -3,28 +3,32 @@
      <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="stylesheets/strangers.css">
       <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="stylesheets/index.js" ></script>
-      <title>Sarah Ing</title>
+      <title>Creatively Fed</title>
   </head>
-  <main>
+  <body>
     <h2 class="overlay">
-      Hi Ryan Yoder and Romaric Fotsing
+      CREATIVELY FED
     </h2>
-
-  </main>
+    <p>
+      Creatively Fed is a tech collective blending the wonders of cutting-edge technology, like machine learning, with art.
+    </p>
+    <p>
+      We believe in collaboration. We work with artists and cultural institutions to create impactful stories with technology.
+    </p>
+  </body>
   <video autoplay muted loop>
-	<source src="http://techslides.com/
-demos/sample-videos/small.webm" type="video/
-webm" />
-	<source src="http://techslides.com/
-demos/sample-videos/small.mp4" type="video/
-mp4" />
-	<source src="http://techslides.com/
-demos/sample-videos/small.ogv" type="video/
-ogg" />
-	<source src="http://techslides.com/
-demos/sample-videos/small.3gp" type="video/3gp"
-/>
+  	<source src="http://techslides.com/
+  demos/sample-videos/small.webm" type="video/
+  webm" />
+  	<source src="http://techslides.com/
+  demos/sample-videos/small.mp4" type="video/
+  mp4" />
+  	<source src="http://techslides.com/
+  demos/sample-videos/small.ogv" type="video/
+  ogg" />
+  	<source src="http://techslides.com/
+  demos/sample-videos/small.3gp" type="video/3gp"
+  />
 </video>
 </html>
