--- a/designbridge.html
+++ b/designbridge.html
@@ -11,10 +11,10 @@
       CREATIVELY FED
     </h2>
     <p>
-      Creatively Fed is a tech collective blending the wonders of cutting-edge technology, like machine learning, with art.
+      Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
     </p>
     <p>
-      We believe in collaboration. We work with artists and cultural institutions to create impactful stories with technology.
+      We believe in collaboration. We work with artists and cultural institutions to create impactful stories with creative technology.
     </p>
   </body>
   <video autoplay muted loop>
