--- a/designbridge.html
+++ b/designbridge.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
      <meta charset="utf-8">
@@ -7,28 +8,17 @@
       <title>Creatively Fed</title>
   </head>
   <body>
-    <h2 class="overlay">
+    <h2 class="name">
       CREATIVELY FED
     </h2>
-    <p>
-      Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
-    </p>
-    <p>
-      We believe in collaboration. We work with artists and cultural institutions to create impactful stories with creative technology.
-    </p>
+    <div class="description">
+      <p>
+        Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
+      </p>
+      <p>
+        We believe in collaboration. We work with artists and cultural institutions to create impactful stories with creative technology.
+      </p>
+    </div>
   </body>
-  <video autoplay muted loop>
-  	<source src="http://techslides.com/
-  demos/sample-videos/small.webm" type="video/
-  webm" />
-  	<source src="http://techslides.com/
-  demos/sample-videos/small.mp4" type="video/
-  mp4" />
-  	<source src="http://techslides.com/
-  demos/sample-videos/small.ogv" type="video/
-  ogg" />
-  	<source src="http://techslides.com/
-  demos/sample-videos/small.3gp" type="video/3gp"
-  />
-</video>
+
 </html>
