--- a/designbridge.html
+++ b/designbridge.html
@@ -3,7 +3,7 @@
   <head>
      <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="stylesheets/strangers.css">
-      <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto:300,700&display=swap" rel="stylesheet">
       <script type="text/javascript" src="stylesheets/index.js" ></script>
       <title>Creatively Fed</title>
   </head>
@@ -16,7 +16,7 @@
         Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
       </p>
       <p>
-        We believe in collaboration. We work with artists and cultural institutions to create impactful stories with creative technology.
+        We believe in collaboration. We work with artists and cultural institutions to create impactful stories with creative tech.
       </p>
     </div>
   </body>
