--- a/designbridge.html
+++ b/designbridge.html
@@ -16,7 +16,7 @@
         Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
       </p>
       <p>
-        We believe in collaboration. We work with artists and cultural institutions to create impactful stories with creative tech.
+        We believe in collaboration. Together with artists and cultural institutions, we create impactful stories with creative tech.
       </p>
     </div>
   </body>
