Change breakpoint for animation

--- a/designbridge.html
+++ b/designbridge.html
@@ -8,9 +8,7 @@
       <title>Creatively Fed</title>
   </head>
   <body>
-    <h2 class="name">
-      CREATIVELY FED
-    </h2>
+    <h2 class="name">CREATIVELY FED</h2>
     <div class="description">
       <p>
         Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
